# transcribe_audio

./: .dockerignore  .env.sample  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup_git.sh  transcribe_audio.py
.github/workflows/: python-app.yml
src/transcribe_audio_app/: transcribe_audio.py
tests/: test_transcribe_audio.py  test_transcription.py
